force-app/main/default/objects/User/fields/knowlarity_cti__User_SIP_Address__c.field-meta.xml
<CustomField>
    <fullName>knowlarity_cti__User_SIP_Address__c</fullName>
    <label>User SIP Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>