force-app/main/default/objects/User/fields/Manodhaara_Counselor__c.field-meta.xml
<CustomField>
    <fullName>Manodhaara_Counselor__c</fullName>
    <description>Lookup to Manodhaara counsellor for approval process</description>
    <label>Manodhaara Counselor</label>
    <relationshipName>Manodhaara_Counselor</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>