force-app/main/default/objects/User/fields/physicalDeliveryOfficeName__c.field-meta.xml
<CustomField>
    <fullName>physicalDeliveryOfficeName__c</fullName>
    <label>physicalDeliveryOfficeName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>