force-app/main/default/objects/User/fields/ver_head__c.field-meta.xml
<CustomField>
    <fullName>ver_head__c</fullName>
    <label>Ver Head</label>
    <relationshipName>Users1</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>