force-app/main/default/objects/User/fields/vh__c.field-meta.xml
<CustomField>
    <fullName>vh__c</fullName>
    <label>VH</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>