force-app/main/default/objects/User/listViews/ActiveSFUsers.listView-meta.xml
<ListView>
    <fullName>ActiveSFUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Active SF Users</label>
    <language>en_US</language>
</ListView>