force-app/main/default/objects/User/listViews/Alumni_Portal_Users.listView-meta.xml
<ListView>
    <fullName>Alumni_Portal_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>owais.ahanger@cloudodyssey.co,venugopalvemula9@gmail.com</value>
    </filters>
    <label>Alumni Portal Users</label>
    <language>en_US</language>
</ListView>