force-app/main/default/objects/User/listViews/Finance_Team_Users.listView-meta.xml
<ListView>
    <fullName>Finance_Team_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Finance Team Profile</value>
    </filters>
    <label>Finance Team Users</label>
    <language>en_US</language>
</ListView>