force-app/main/default/objects/User/listViews/Professor_Profile.listView-meta.xml
<ListView>
    <fullName>Professor_Profile</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>EMPLOYEE_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Professor</value>
    </filters>
    <label>Professor Profile</label>
    <language>en_US</language>
</ListView>