force-app/main/default/objects/User/listViews/Stakeholders_Management.listView-meta.xml
<ListView>
    <fullName>Stakeholders_Management</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>Bhagvan,Rahul,Rangaraj,Jyoti,Kumar,Harshita,Chandan,Sandeep,Umesh,mdjaya</value>
    </filters>
    <label>Stakeholders &amp; Management</label>
    <language>en_US</language>
</ListView>