force-app/main/default/objects/User/listViews/Vertical_Head.listView-meta.xml
<ListView>
    <fullName>Vertical_Head</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Vertical Head</value>
    </filters>
    <label>Vertical Head</label>
    <language>en_US</language>
</ListView>